# memory-banker

./: CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  TESTING.md  Taskfile.yml  example_usage.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: token_tracking.md
examples/: token_usage_demo.py
examples/demo_reports/: demo_token_usage.json
memory-bank/: activeContext.md  aiGuidelines.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory_banker/: __init__.py  agents.py  ai_service_rules.json  ai_service_rules.py  cli.py  main.py  memory_bank.py  progress.py  token_tracking.py
test-temp-project/: README.md  pyproject.toml
test-temp-project/test_project/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/api_integration/: __init__.py  test_real_api.py
tests/fixtures/: conftest.py
tests/integration/: __init__.py  test_cli_commands.py  test_cli_interface.py
tests/unit/: __init__.py  test_agents.py  test_ai_service_rules.py  test_cli.py  test_memory_bank.py
