[project]
name = "test-project"
version = "0.1.0"
description = "Simple test project"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.scripts]
test-app = "test_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"